--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "speed-words",
   "version": "0.1.0",
   "private": true,
-	"homepage": "https://gowagowa-cha.github.io/speed-words/",
+  "homepage": "https://gowagowa-cha.github.io/speed-words/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "plural-ru": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,8 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
